<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:textAlignment="center" >
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/nomeTitle"
            android:textAlignment="center"
            style="@style/textPrimary"/>
        <TextView
            android:id="@+id/nomeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/textSecundary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/especialidadeTitle"
            android:textAlignment="center"
            style="@style/textPrimary" />
        <TextView
            android:id="@+id/especialidadeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/textSecundary" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/idadeTitle"
            android:textAlignment="center"
            style="@style/textPrimary" />
        <TextView
            android:id="@+id/idadeView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            style="@style/textSecundary" />
    </LinearLayout>
</RelativeLayout>